--- a/templates/admin_patterns.html
+++ b/templates/admin_patterns.html
@@ -275,6 +275,7 @@
                 <a href="/admin/patterns" class="active">Patterns</a>
                 <a href="/admin/pending">Pending Review</a>
                 <a href="/admin/search">Search</a>
+                <a href="/admin/users">Users</a>
                 <a href="/admin/logout" class="logout">Logout</a>
             </nav>
         </div>
