--- a/templates/admin_pending.html
+++ b/templates/admin_pending.html
@@ -372,6 +372,7 @@
                 <a href="/admin/patterns">Patterns</a>
                 <a href="/admin/pending" class="active">Pending Review</a>
                 <a href="/admin/search">Search</a>
+                <a href="/admin/users">Users</a>
                 <a href="/admin/logout" class="logout">Logout</a>
             </nav>
         </div>
