--- a/templates/how-it-works.html
+++ b/templates/how-it-works.html
@@ -42,8 +42,7 @@
                     </div>
                 </div>
                 <div class="auth-cta" id="authCTA">
-                    <a href="/login" class="btn-secondary">Sign In</a>
-                    <a href="/pricing" class="btn-primary">Upgrade</a>
+                    <a href="/login" class="btn-primary">Sign In</a>
                 </div>
                 </nav>
                 <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
@@ -64,8 +63,7 @@
                     <a href="#" onclick="logout()" class="nav-link">Logout</a>
                 </div>
             <div class="auth-cta" id="mobileAuthCTA">
-                <a href="/login" class="btn-secondary">Sign In</a>
-                <a href="/pricing" class="btn-primary">Upgrade</a>
+                <a href="/login" class="btn-primary">Sign In</a>
             </div>
             </nav>
         </header>
