--- a/templates/admin_search.html
+++ b/templates/admin_search.html
@@ -286,6 +286,7 @@
                 <a href="/admin/patterns">Patterns</a>
                 <a href="/admin/pending">Pending Review</a>
                 <a href="/admin/search" class="active">Search</a>
+                <a href="/admin/users">Users</a>
                 <a href="/admin/logout" class="logout">Logout</a>
             </nav>
         </div>
